--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "license": "BSD",
   "dependencies": {
-    "express": "3.4.8"
+    "express": "3.4.8",
+    "socket.io": "1.3.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
