--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Virtual Girl",
+  "name": "virtualgirl",
   "version": "0.0.1",
   "description": "Multi Room Chat",
   "main": "index.js",
