--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
-  "name": "virtualgirl",
-  "version": "0.0.1",
-  "description": "Multi Room Chat",
+  "name": "virtual_girl",
+  "version": "0.0.0",
+  "description": "",
   "main": "index.js",
-  "author": "Arpit Kulshrestha",
+  "author": "speak2arpit",
   "private": true,
   "license": "BSD",
   "dependencies": {
-    "express": "3.4.8",
-    "socket.io": "1.3.5"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": ["Chat","MultiRoom"],
-  "engines": {
-    "node": "0.10.x"
+    "express": "^3.4.8"
   }
 }
